# NLW-Computer-Vision

./: .env.example  .gitattributes  .gitignore  README.md  app.py  aula01.ipynb  aula02.ipynb  deteccao_objetos_mediapipe.ipynb  gravador_dataset_landmarks.ipynb  pyproject.toml  treinador_gestos.ipynb
assets/: script.js  style.css
core/: image_utils.py  main.py  modelos.py  reconhecedor.py  reconhecedor_hibrido.ipynb
